After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760772 - Severe emulation regression
Severe emulation regression
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
git master
Other Linux
: Normal blocker
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-18 09:42 UTC by Egmont Koblinger
Modified: 2016-01-18 18:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Egmont Koblinger 2016-01-18 09:42:22 UTC
Start the "joe" text editor with a file (e.g. "joe src/vte.cc") and press pageup/pagedown a few times.

Notice that the display becomes heavily corrupted, totally unusable.
Comment 1 Egmont Koblinger 2016-01-18 09:42:39 UTC
07150c4131a345f6e92a18bdd0bd399af6607dc0 is the first bad commit
commit 07150c4131a345f6e92a18bdd0bd399af6607dc0
Author: Christian Persch <chpe@gnome.org>
Date:   Thu Jan 14 17:05:36 2016 +0100

    widget: Move some methods to VteTerminalPrivate

:040000 040000 aab52e4c791db62124736dae233ee371c6cef9cc 0fd56431e96cf3010a3c2048b7fc4018bfb3cde6 M	src
Comment 2 Christian Persch 2016-01-18 12:06:44 UTC
Will try to find this tonight and also re-check all the other conversion patches to vteseq.cc for similar problems.
Comment 3 Egmont Koblinger 2016-01-18 18:42:15 UTC
Verified, thanks!