emulation: Fix stupid typo

Fix bug introduced by commit 07150c4131a345f6e92a18bdd0bd399af6607dc0 .

https://bugzilla.gnome.org/show_bug.cgi?id=760772